[gd_scene load_steps=37 format=3 uid="uid://dwvtpua2pdkh2"]

[ext_resource type="Script" uid="uid://brqio7in3kvl8" path="res://Scene/Script/UI_Scripts/player_ui.gd" id="1_q25tn"]
[ext_resource type="Theme" uid="uid://bwbvuor4bwca7" path="res://Materials/UI_Theme/Theme_0.tres" id="2_5xwoe"]
[ext_resource type="Shader" uid="uid://cglbdk8lobywl" path="res://Materials/2D shaders/HP_MP_Glass.gdshader" id="2_rj6n4"]
[ext_resource type="Script" uid="uid://cmv6ofwreb88q" path="res://Scene/Script/Cards_Mechanick.gd" id="3_00pm1"]
[ext_resource type="Texture2D" uid="uid://cd1qbwtr5y4c4" path="res://Assets/Images/ICONs/Pixel's_icon/Equipment/Iron Boot.png" id="6_cxaj8"]
[ext_resource type="Texture2D" uid="uid://b7x4e7skyvj7r" path="res://Assets/Images/ICONs/Pixel's_icon/Weapon & Tool/Golden Sword.png" id="6_yegcq"]
[ext_resource type="Texture2D" uid="uid://nlo323dqtl0d" path="res://Assets/Images/ICONs/Pixel's_icon/Misc/Heart.png" id="7_adel5"]
[ext_resource type="Texture2D" uid="uid://co7iveyfeulxs" path="res://Assets/Images/ICONs/Pixel's_icon/Misc/Scroll.png" id="7_oyl28"]
[ext_resource type="Texture2D" uid="uid://dwh3kqyqimmjn" path="res://Assets/Images/ICONs/Pixel's_icon/Misc/Rune Stone.png" id="8_0pu00"]
[ext_resource type="Texture2D" uid="uid://6wyfu3dtvw31" path="res://Assets/Images/ICONs/Pixel's_icon/Material/Fabric.png" id="8_cxaj8"]
[ext_resource type="Script" uid="uid://brpfvgij1mf83" path="res://Scene/Script/UI_Scripts/player_options_ui.gd" id="9_0pu00"]
[ext_resource type="Texture2D" uid="uid://dywobtubvjb2m" path="res://Assets/Images/ICONs/Pixel's_icon/Material/String.png" id="9_adel5"]
[ext_resource type="Texture2D" uid="uid://dxwkkyokpus8i" path="res://Assets/Images/ICONs/Pixel's_icon/Misc/Golden Coin.png" id="11_uvjfu"]
[ext_resource type="Texture2D" uid="uid://d0nx0sv1tgesj" path="res://Assets/Images/ICONs/Pixel's_icon/Ore & Gem/Crystal.png" id="12_b6y0w"]
[ext_resource type="Texture2D" uid="uid://bp6s2i1b5h1ue" path="res://Assets/Images/ICONs/Pixel's_icon/Ore & Gem/Obsidian.png" id="13_cxaj8"]
[ext_resource type="Texture2D" uid="uid://cy7nc6rhoqusu" path="res://Assets/Images/ICONs/Pixel's_icon/Ore & Gem/Silver Ingot.png" id="14_oyl28"]
[ext_resource type="Texture2D" uid="uid://dy8abdb7ufha6" path="res://Assets/Images/ICONs/Pixel's_icon/Potion/Red Potion 2.png" id="15_lxwu3"]
[ext_resource type="Texture2D" uid="uid://vdb3xavxjdwu" path="res://Assets/Images/ICONs/Pixel's_icon/Potion/Green Potion.png" id="16_468ky"]
[ext_resource type="Script" uid="uid://b4hvmk8t0qkgu" path="res://addons/proton_control_animation/src/proton_control_animation.gd" id="19_lxwu3"]
[ext_resource type="Script" uid="uid://bi4omyv2xson" path="res://addons/proton_control_animation/src/animations/scale.gd" id="20_468ky"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q25tn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5xwoe"]
shader = ExtResource("2_rj6n4")
shader_parameter/water_color = Color(1, 0, 0, 1)
shader_parameter/water_wave_speed = 2.0
shader_parameter/water_wave_ci = 0.05
shader_parameter/water_back_lightness = 0.8
shader_parameter/ball_color = Color(1, 1, 1, 1)
shader_parameter/ball_border_ci = 5.0
shader_parameter/ball_light_speed = 2.0
shader_parameter/light_effect = false
shader_parameter/border_exclusion_effect = false
shader_parameter/wave_num = 2.0
shader_parameter/wave_fix_on_border = false
shader_parameter/height = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a57nb"]
shader = ExtResource("2_rj6n4")
shader_parameter/water_color = Color(0.162746, 0.628468, 0.401613, 1)
shader_parameter/water_wave_speed = 2.0
shader_parameter/water_wave_ci = 0.05
shader_parameter/water_back_lightness = 0.8
shader_parameter/ball_color = Color(1, 1, 1, 1)
shader_parameter/ball_border_ci = 5.0
shader_parameter/ball_light_speed = 2.0
shader_parameter/light_effect = false
shader_parameter/border_exclusion_effect = false
shader_parameter/wave_num = 2.0
shader_parameter/wave_fix_on_border = false
shader_parameter/height = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvjfu"]
bg_color = Color(0.858824, 0.858824, 0.858824, 0.501961)
skew = Vector2(-0.25, 0)

[sub_resource type="InputEventKey" id="InputEventKey_uvjfu"]
device = -1
physical_keycode = 81
unicode = 113

[sub_resource type="Shortcut" id="Shortcut_b6y0w"]
events = [SubResource("InputEventKey_uvjfu")]

[sub_resource type="InputEventKey" id="InputEventKey_cxaj8"]
device = -1
physical_keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_oyl28"]
events = [SubResource("InputEventKey_cxaj8")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxwu3"]
bg_color = Color(0.858824, 0.858824, 0.858824, 0.501961)
skew = Vector2(0.25, 0)

[sub_resource type="InputEventKey" id="InputEventKey_oyl28"]
device = -1
physical_keycode = 4194325

[sub_resource type="Shortcut" id="Shortcut_lxwu3"]
events = [SubResource("InputEventKey_oyl28")]

[sub_resource type="InputEventKey" id="InputEventKey_468ky"]
device = -1
physical_keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_r6q0k"]
events = [SubResource("InputEventKey_468ky")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5g307"]

[sub_resource type="Resource" id="Resource_r6q0k"]
script = ExtResource("20_468ky")
from = 2
from_scale = Vector2(0, 0)
to = 2
to_scale = Vector2(1, 1)
easing = 2
transition = 4
default_duration = 1.0
metadata/_custom_type_script = "uid://bi4omyv2xson"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pu00"]
bg_color = Color(0, 0, 0, 1)

[node name="Player_UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q25tn")

[node name="Info_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5xwoe")
theme_override_styles/panel = SubResource("StyleBoxEmpty_q25tn")

[node name="XP_Bar" type="ProgressBar" parent="Info_panel"]
modulate = Color(0, 0.784314, 0.784314, 1)
custom_minimum_size = Vector2(380, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.338
anchor_top = 0.958
anchor_right = 0.668
anchor_bottom = 0.992
offset_left = -0.376038
offset_top = 0.215942
offset_right = -0.536072
offset_bottom = 0.18396
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="XP_Label" type="Label" parent="Info_panel/XP_Bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -9.0
offset_right = 20.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "0/100"

[node name="Container" type="VBoxContainer" parent="Info_panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.435
anchor_right = 0.075
anchor_bottom = 0.565
offset_top = 22.12
offset_right = -41.4
offset_bottom = -22.12
grow_vertical = 2

[node name="Health" type="Label" parent="Info_panel/Container"]
layout_mode = 2
text = "Health:"

[node name="Level" type="Label" parent="Info_panel/Container"]
layout_mode = 2
text = "Level:"

[node name="Atack_speed" type="Label" parent="Info_panel/Container"]
layout_mode = 2
text = "Attack Speed:"

[node name="Kill_Count" type="Label" parent="Info_panel/Container"]
layout_mode = 2
text = "Kill Count:"

[node name="Health_Panel" type="Panel" parent="Info_panel"]
material = SubResource("ShaderMaterial_5xwoe")
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.261465
anchor_top = 0.994062
anchor_right = 0.261465
anchor_bottom = 0.994062
offset_left = -0.208008
offset_top = -81.152
offset_right = 79.792
offset_bottom = -0.152039
metadata/_edit_use_anchors_ = true

[node name="Stamina_Panel" type="Panel" parent="Info_panel"]
material = SubResource("ShaderMaterial_a57nb")
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.741236
anchor_top = 0.992
anchor_right = 0.741236
anchor_bottom = 0.992518
offset_left = -79.9041
offset_top = -80.816
offset_right = 0.0959473
offset_bottom = -0.152039
metadata/_edit_use_anchors_ = true

[node name="Item_Panel" type="Panel" parent="Info_panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -80.0
offset_right = 288.0
offset_bottom = 2.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_uvjfu")

[node name="Btn_Container" type="HBoxContainer" parent="Info_panel/Item_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -33.0
offset_right = 154.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_constants/separation = 50

[node name="Heal_me_btn" type="Button" parent="Info_panel/Item_Panel/Btn_Container"]
layout_mode = 2
shortcut = SubResource("Shortcut_b6y0w")
icon = ExtResource("15_lxwu3")
icon_alignment = 1

[node name="Stamina_me_btn" type="Button" parent="Info_panel/Item_Panel/Btn_Container"]
layout_mode = 2
shortcut = SubResource("Shortcut_oyl28")
icon = ExtResource("16_468ky")

[node name="Q_lbl" type="Label" parent="Info_panel/Item_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.707
anchor_right = 0.403
anchor_bottom = 0.707
offset_left = -0.900009
offset_top = 0.0259972
offset_right = 12.1
offset_bottom = 18.026
text = "Q"

[node name="E_lbl" type="Label" parent="Info_panel/Item_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.733
anchor_top = 0.707
anchor_right = 0.733
anchor_bottom = 0.707
offset_left = 0.0999908
offset_top = 0.0259972
offset_right = 13.1
offset_bottom = 18.026
text = "E"

[node name="Ability_Panel" type="Panel" parent="Info_panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -80.0
offset_right = 12.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lxwu3")

[node name="Btn_Container" type="HBoxContainer" parent="Info_panel/Ability_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -33.0
offset_right = 152.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_constants/separation = 50

[node name="Dash_btn" type="Button" parent="Info_panel/Ability_Panel/Btn_Container"]
layout_mode = 2
shortcut = SubResource("Shortcut_lxwu3")
icon = ExtResource("6_cxaj8")

[node name="Blast_btn" type="Button" parent="Info_panel/Ability_Panel/Btn_Container"]
layout_mode = 2
shortcut = SubResource("Shortcut_r6q0k")
icon = ExtResource("7_oyl28")

[node name="Dash_lbl" type="Label" parent="Info_panel/Ability_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.423
anchor_top = 0.793
anchor_right = 0.423
anchor_bottom = 0.793
offset_left = -19.9
offset_top = -9.026
offset_right = 20.1
offset_bottom = 8.974
text = "Shift"

[node name="Blast_lbl" type="Label" parent="Info_panel/Ability_Panel"]
custom_minimum_size = Vector2(13, 18)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.793
anchor_right = 0.75
anchor_bottom = 0.793
offset_left = -8.00002
offset_top = -8.026
offset_right = 4.99998
offset_bottom = 9.974
text = " 1"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5xwoe")
theme_override_styles/panel = SubResource("StyleBoxEmpty_5g307")

[node name="Lvl_up_lbl" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.955
anchor_right = 0.5
anchor_bottom = 0.955
offset_left = -28.0
offset_top = -17.84
offset_right = 28.0
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 0
text = "Level Up"

[node name="TextureRect" type="TextureRect" parent="Panel/Lvl_up_lbl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = 30.0
offset_right = 62.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_cxaj8")

[node name="Cards_Panel" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
script = ExtResource("3_00pm1")

[node name="Close_btn" type="Button" parent="Panel/Cards_Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_bottom = 92.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "X"

[node name="Label" type="Label" parent="Panel/Cards_Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 86
text = "Player information"
horizontal_alignment = 1

[node name="Card_container" type="HBoxContainer" parent="Panel/Cards_Panel"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.077
anchor_top = 0.77
anchor_right = 0.424
anchor_bottom = 0.77
offset_left = 0.29599
offset_top = -99.96
offset_right = 0.551971
offset_bottom = 0.0400085

[node name="ATK_Card_btn" type="Button" parent="Panel/Cards_Panel/Card_container" groups=["ATK"]]
layout_mode = 2
disabled = true
icon = ExtResource("6_yegcq")

[node name="Label" type="Label" parent="Panel/Cards_Panel/Card_container/ATK_Card_btn"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.194
offset_top = 101.36
offset_bottom = -0.0400009
grow_horizontal = 2
grow_vertical = 2
text = "ATK +1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HP_Card_btn" type="Button" parent="Panel/Cards_Panel/Card_container" groups=["HP"]]
layout_mode = 2
disabled = true
icon = ExtResource("7_adel5")

[node name="Label" type="Label" parent="Panel/Cards_Panel/Card_container/HP_Card_btn"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.194
offset_top = 101.36
offset_bottom = -0.0400009
grow_horizontal = 2
grow_vertical = 2
text = "HP +1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ATK_Speed_Card_btn" type="Button" parent="Panel/Cards_Panel/Card_container" groups=["SP"]]
layout_mode = 2
disabled = true
icon = ExtResource("8_0pu00")

[node name="Label" type="Label" parent="Panel/Cards_Panel/Card_container/ATK_Speed_Card_btn"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.194
offset_top = 101.36
offset_bottom = -0.0400009
grow_horizontal = 2
grow_vertical = 2
text = "ATK Rate +0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options_GridContainer" type="GridContainer" parent="Panel/Cards_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097
anchor_top = 0.599
anchor_right = 0.097
anchor_bottom = 0.599
offset_left = 0.255997
offset_top = -267.152
offset_right = 256.256
offset_bottom = -11.152
script = ExtResource("9_0pu00")

[node name="Options_lbl" type="Label" parent="Panel/Cards_Panel/Options_GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "OPTIONS"

[node name="Music_Volume" type="TextureRect" parent="Panel/Cards_Panel/Options_GridContainer"]
layout_mode = 2
texture = ExtResource("9_adel5")
stretch_mode = 2

[node name="M_Slider" type="HSlider" parent="Panel/Cards_Panel/Options_GridContainer/Music_Volume"]
layout_mode = 2
offset_left = 35.0
offset_top = 7.0
offset_right = 256.0
offset_bottom = 23.0
min_value = -35.0
max_value = 15.0

[node name="Resolution_lbl" type="Label" parent="Panel/Cards_Panel/Options_GridContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "RESOLUTION"
horizontal_alignment = 1

[node name="Res_MenuButton" type="OptionButton" parent="Panel/Cards_Panel/Options_GridContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1
selected = 0
item_count = 4
popup/item_0/text = "1152 х 648"
popup/item_0/id = 0
popup/item_1/text = "1280 х 720"
popup/item_1/id = 1
popup/item_2/text = "1600 х 900"
popup/item_2/id = 2
popup/item_3/text = "1920 х 1080"
popup/item_3/id = 3

[node name="Scale_lbl" type="Label" parent="Panel/Cards_Panel/Options_GridContainer"]
layout_mode = 2
text = "3D SCALE"
horizontal_alignment = 1

[node name="Scale_OptionButton" type="OptionButton" parent="Panel/Cards_Panel/Options_GridContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Scale: 1"
popup/item_0/id = 0
popup/item_1/text = "Scale: 0.5"
popup/item_1/id = 1

[node name="HUB_btn" type="Button" parent="Panel/Cards_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.489
anchor_top = 0.748
anchor_right = 0.489
anchor_bottom = 0.748
offset_left = -128.328
offset_top = -77.7041
offset_right = 127.672
offset_bottom = 0.29599
text = "Go back to HUB"

[node name="Save_btn" type="Button" parent="Panel/Cards_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.489
anchor_top = 0.856
anchor_right = 0.489
anchor_bottom = 0.856
offset_left = -128.328
offset_top = -77.688
offset_right = 127.672
offset_bottom = 0.311951
text = "Save"

[node name="Exit_btn" type="Button" parent="Panel/Cards_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.489
anchor_top = 0.965
anchor_right = 0.489
anchor_bottom = 0.965
offset_left = -128.328
offset_top = -78.3201
offset_right = 127.672
offset_bottom = -0.320007
text = "Exit game"

[node name="Inv_GridContainer" type="GridContainer" parent="Panel/Cards_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.907
anchor_top = 0.642
anchor_right = 0.907
anchor_bottom = 0.642
offset_left = -284.864
offset_top = -147.016
offset_right = 0.135986
offset_bottom = -0.0160217
columns = 4

[node name="Coin" type="TextureRect" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("11_uvjfu")

[node name="Coin_lbl" type="Label" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "coin: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Crystal" type="TextureRect" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("12_b6y0w")

[node name="Crystal_lbl" type="Label" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "crystal: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Obsidian" type="TextureRect" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("13_cxaj8")

[node name="Obsidian_lbl" type="Label" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Obsidian: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Ingot" type="TextureRect" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("14_oyl28")

[node name="Ingot_lbl" type="Label" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "ingot: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Health_potion" type="TextureRect" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("15_lxwu3")

[node name="Health_potion_lbl" type="Label" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "health potion: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Stamina_potion" type="TextureRect" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("16_468ky")

[node name="Stamina_potion_lbl" type="Label" parent="Panel/Cards_Panel/Inv_GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Stamina potion: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Scale_Up" type="Node" parent="Panel/Cards_Panel" node_paths=PackedStringArray("target")]
script = ExtResource("19_lxwu3")
target = NodePath("..")
animation = SubResource("Resource_r6q0k")
duration = 0.3
on_show = true
metadata/_custom_type_script = "uid://b4hvmk8t0qkgu"

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 1
access = 1
root_subfolder = "user://GodotSave/Fates_of_the_Fallen"
filters = PackedStringArray("*.save")

[node name="Loading_panel" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0pu00")

[connection signal="resized" from="Info_panel/Container" to="." method="_on_container_resized"]
[connection signal="pressed" from="Info_panel/Ability_Panel/Btn_Container/Dash_btn" to="." method="_on_dash_btn_pressed"]
[connection signal="pressed" from="Panel/Cards_Panel/Close_btn" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="Panel/Cards_Panel/Card_container/ATK_Card_btn" to="Panel/Cards_Panel" method="_on_atk_card_btn_pressed"]
[connection signal="pressed" from="Panel/Cards_Panel/Card_container/HP_Card_btn" to="." method="_on_hp_card_btn_pressed"]
[connection signal="pressed" from="Panel/Cards_Panel/Card_container/HP_Card_btn" to="Panel/Cards_Panel" method="_on_hp_card_btn_pressed"]
[connection signal="pressed" from="Panel/Cards_Panel/Card_container/ATK_Speed_Card_btn" to="Panel/Cards_Panel" method="_on_atk_speed_card_btn_pressed"]
[connection signal="value_changed" from="Panel/Cards_Panel/Options_GridContainer/Music_Volume/M_Slider" to="Panel/Cards_Panel/Options_GridContainer" method="_on_m_slider_value_changed"]
[connection signal="item_selected" from="Panel/Cards_Panel/Options_GridContainer/Res_MenuButton" to="Panel/Cards_Panel/Options_GridContainer" method="_on_res_menu_button_item_selected"]
[connection signal="item_selected" from="Panel/Cards_Panel/Options_GridContainer/Scale_OptionButton" to="Panel/Cards_Panel/Options_GridContainer" method="_on_scale_option_button_item_selected"]
[connection signal="pressed" from="Panel/Cards_Panel/HUB_btn" to="Panel/Cards_Panel" method="_on_hub_btn_pressed"]
[connection signal="pressed" from="Panel/Cards_Panel/Save_btn" to="Panel/Cards_Panel" method="_on_save_btn_pressed"]
[connection signal="pressed" from="Panel/Cards_Panel/Exit_btn" to="Panel/Cards_Panel" method="_on_exit_btn_pressed"]
[connection signal="file_selected" from="FileDialog" to="Panel/Cards_Panel" method="_on_file_dialog_file_selected"]
